# tpm2-tss

./: .clang-tidy  Makefile.am  REUSE.toml  configure.ac  git.mk
.github/: renovate-config.json  renovate.json
.github/workflows/: cifuzz.yml  clang-format.yml  clang-tidy.yml  codeql.yml  main.yml  renovate.yml  reuse.yaml
include/tss2/: tss2_sys.h  tss2_tpm2_types.h
script/: ci.sh
sphinx/: requirements.txt
src/rust/: Cargo.toml  shell.nix
src/rust/tpm2-types/: Cargo.toml
src/rust/tpm2-types/src/: de.rs  lib.rs  main.rs  se.rs
src/rust/tss2-tcti/: build.rs.bak
src/rust/tss2-tcti-sys/: build.rs
src/rust/tss2-tcti/src/: tctildr.rs
src/tss2-fapi/: fapi_util.c  tpm_json_deserialize.c  tpm_json_serialize.c
src/tss2-fapi/api/: Fapi_GetTpmBlobs.c
