[package]
name = "tpm2-types"
version = "0.1.0"
edition = "2021"

[lib]
name         = "tpm2_types"

[[bin]]
name = "tpm2_types"
path = "src/main.rs"

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
paste = "1.0.14"
serde = { version = "1.0.152", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
